# receipt-processor-challenge

./: .dockerignore  .env.example  .gitignore  README.md  project_structure.md  pyproject.toml
conf/: logging.conf
docker/: Dockerfile  docker-compose.yml
src/: helpers.py  main.py
src/database/: db.py
src/exceptions/: base_exceptions.py  exception_handlers.py  exceptions.py
src/receipts/: controller.py  exceptions.py  model.py  point_repo.py  receipt_repo.py  schema.py  service.py
src/repo/: base.py  exceptions.py
src/utils/: config.py  logging.py
tests/: conftest.py  test_receipts.py  test_settings.py
